# Astra

./: .gitignore  README.md  pyproject.toml
astra_cli/: __init__.py  __main__.py
astra_core/: __init__.py  audit.py  config.py  dashboard.py  mcp.py  memory.py
astra_core/actions/: __init__.py  shell.py  snapshots.py
astra_core/backends/: __init__.py  ollama.py
astra_core/safety/: __init__.py  paths.py  shell_policy.py
astra_core/web/: __init__.py  server.py
tests/: test_actions_cli_api.py  test_audit_memory_mcp.py  test_dashboard_server.py  test_ollama_backend.py  test_safety.py  test_snapshots.py
